def/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>