def/force-app/main/default/objects/Contact/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <label>age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>