def/force-app/main/default/objects/Contact/fields/Dellaccountmd__c.field-meta.xml
<CustomField>
    <fullName>Dellaccountmd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dellaccountmd</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Dellaccountmd)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>