def/force-app/main/default/objects/Contact/fields/picture__c.field-meta.xml
<CustomField>
    <fullName>picture__c</fullName>
    <label>picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>