def/force-app/main/default/objects/Contact/recordTypes/Coworker.recordType-meta.xml
<RecordType>
    <fullName>Coworker</fullName>
    <active>true</active>
    <label>Coworker</label>
</RecordType>