def/force-app/main/default/objects/Contact/validationRules/agecheck.validationRule-meta.xml
<ValidationRule>
    <fullName>agecheck</fullName>
    <active>true</active>
    <errorConditionFormula>age__c  &lt;18</errorConditionFormula>
    <errorMessage>Age cant be less than 18</errorMessage>
</ValidationRule>