def/force-app/main/default/objects/Contact/validationRules/Lengthoflastnamecannotbelessthan3char.validationRule-meta.xml
<ValidationRule>
    <fullName>Lengthoflastnamecannotbelessthan3char</fullName>
    <active>true</active>
    <description>to check order of execution</description>
    <errorConditionFormula>LEN( LastName ) &lt;3</errorConditionFormula>
    <errorMessage>Last NAme should be more than 3 chars</errorMessage>
</ValidationRule>